# NetNovaPlaceholder

./: .dockerignore  .env.example  .gitattributes  .gitignore  COMMANDS.md  Cargo.toml  Dockerfile  INSIDER-THREAT-GAPS.md  README.md  TAD.md  docker-compose.yml  generate-certs.yml  p.md
config/: certs.yml  wazuh-slack.dev.yaml  wazuh-slack.docker.yaml  wazuh-slack.example.yaml
config/wazuh_cluster/: wazuh_manager.conf
config/wazuh_dashboard/: opensearch_dashboards.yml
config/wazuh_indexer/: internal_users.yml  wazuh.indexer.yml
config/wazuh_indexer_ssl_certs/: admin-key.pem  admin.pem  root-ca-manager.key  root-ca-manager.pem  wazuh.dashboard-key.pem  wazuh.dashboard.pem  wazuh.indexer-key.pem  wazuh.indexer.pem  wazuh.manager-key.pem  wazuh.manager.pem
crates/slack-connector-cli/: Cargo.toml
crates/slack-connector-cli/src/: health.rs  lib.rs  main.rs  observability.rs  supervisor.rs
crates/slack-connector-core/: Cargo.toml
crates/slack-connector-core/src/: config.rs  event.rs  filter.rs  lib.rs  sink.rs  source.rs
crates/slack-connector-test-fixtures/: Cargo.toml
crates/slack-connector-test-fixtures/fixtures/: audit_file_downloaded.json  audit_user_login.json  events_file_public.json  events_file_shared.json  events_member_joined.json  events_tokens_revoked.json
crates/slack-connector-test-fixtures/src/: lib.rs
crates/slack-sources/: Cargo.toml
crates/slack-sources/src/: access_logs.rs  audit.rs  dedup.rs  events_socket.rs  lib.rs  normalize.rs  probe.rs  state.rs  util.rs  web_inventory.rs
crates/wazuh-sinks/: Cargo.toml
crates/wazuh-sinks/src/: json_file.rs  lib.rs  stdout.rs  unix_socket.rs
deploy/: ossec.conf.localfile.snippet  ossec.conf.wodle.snippet
deploy/systemd/: wazuh-slack.service
scripts/: demo.ps1  logtest.ps1
wazuh-decoders/: 0501-slack-decoder.xml
wazuh-lists/: slack-allowed-countries  slack-trusted-networks
wazuh-rules/: 0500-slack-rules.xml
