[workspace]
resolver = "2"
members = [
    "crates/slack-connector-core",
    "crates/slack-sources",
    "crates/wazuh-sinks",
    "crates/slack-connector-cli",
    "crates/slack-connector-test-fixtures",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT OR Apache-2.0"
authors = ["Theo Mazzocco <theo.mazzocco47@gmail.com>"]
repository = "https://github.com/tmazzocco/wazuh-slack-connector"

[workspace.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "fs", "net", "sync", "time", "io-util", "io-std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "gzip"] }
async-trait = "0.1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
clap = { version = "4", features = ["derive", "env"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
governor = "0.7"
backoff = { version = "0.4", features = ["tokio"] }
lru = "0.12"
parking_lot = "0.12"
url = "2"
futures = "0.3"
slack-morphism = { version = "2", default-features = false, features = ["hyper"] }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
rusqlite = { version = "0.32", features = ["bundled"] }
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.16", default-features = false, features = ["http-listener"] }

# internal
slack-connector-core = { path = "crates/slack-connector-core" }
slack-sources = { path = "crates/slack-sources" }
wazuh-sinks = { path = "crates/wazuh-sinks" }
slack-connector-test-fixtures = { path = "crates/slack-connector-test-fixtures" }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "debuginfo"
