[package]
name = "slack-connector-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "wazuh-slack"
path = "src/main.rs"

[dependencies]
slack-connector-core.workspace = true
slack-sources.workspace = true
wazuh-sinks.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
async-trait.workspace = true
chrono.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true

[dev-dependencies]
slack-connector-test-fixtures.workspace = true
