[package]
name = "slack-sources"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
slack-connector-core.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
async-trait.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
governor.workspace = true
backoff.workspace = true
lru.workspace = true
parking_lot.workspace = true
url.workspace = true
futures.workspace = true
slack-morphism = { workspace = true }
rusqlite.workspace = true

[dev-dependencies]
slack-connector-test-fixtures.workspace = true
