[package]
name = "wazuh-sinks"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
slack-connector-core.workspace = true
tokio.workspace = true
serde_json.workspace = true
async-trait.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
slack-connector-test-fixtures.workspace = true
